--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -2,8 +2,9 @@
 
 .app
   height: 100vh
-  background-color: $black
   color: white
+  background-color: #485461
+  background-image: linear-gradient(315deg, #485461 0%, #28313b 74%)
 
 .container
   padding: 0
