--- a/src/index.sass
+++ b/src/index.sass
@@ -1,4 +1,5 @@
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700'
+@import 'https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'
 
 *
   padding: 0
@@ -7,4 +8,4 @@
 
 body
   font-size: 15px
-  font-family: 'Open Sans', sans-serif
+  font-family: 'Nunito', sans-serif
