--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -7,17 +7,19 @@
   background-image: linear-gradient(315deg, #485461 0%, #28313b 74%)
 
 .container
-  padding: 0
+  padding: 0 10px
 
 .no-gutters
   margin-right: 0
   margin-left: 0
+  padding-left: 0
+  padding-right: 0
   > .col,
   > [class*="col-"]
     padding-right: 0
     padding-left: 0
 
 .content
+  padding: 0 10px
   margin: auto
-  min-height: calc(100vh - 56px)
 
